# bad-repo

./: README.md  bad_stuff  pyproject.toml
