[project]
name = "bad-repo"
version = "0.1.0"
description = "Repo with Vulnerabilities"
readme = "README.md"
authors = [
    {name = "Sandi Besen", email = "sandi.besen@ibm.com"},
    {name = "Kenneth Ocheltree", email = "kochel@us.ibm.com"}
]
requires-python = ">=3.13"
dependencies = [
    "anyio==4.11.0",
	"attrs==25.4.0",
    "numpy==1.21.1",
	"urllib3==2.4.0",
]
